syntax = "proto3";

package int.backend.mohamed;

option go_package = "github.com/mlaradji/int-backend-mohamed;pb";

import "google/protobuf/timestamp.proto";

message JobInfo {
  string id = 1;
  string command = 2;
  JobStatus job_status = 3;
  uint32 exit_code = 4;

  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp finished_at = 6;
}

message JobLog {
  oneof log {
    string stdout = 1;
    string stderr = 2;
  }
}

enum JobStatus {
  UNKNOWN = 0;   // Default value.
  RUNNING = 1;   // The job is still running.
  STOPPED = 2;   // The job was stopped by a user.
  SUCCEEDED = 3; // The job finished with a zero exit code.
  FAILED = 4;    // The job finished with a non-zero exit code, or there was a
                 // server error in processing the job.
}